test/typecheck/pass/cast_lexp2.sail

val unit -> int effect pure test

function int test () = {
  (nat) y := 10;
  y
}
