test/typecheck/fail/strict_var.sail
$option -strict_var

val main : unit -> unit

function main() = {
    x : int = 3;
    ()
}
